--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -18,9 +18,7 @@ builds:
 
 archives:
   - format: zip
-    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-    replacements:
-      darwin: macos
+    name_template: '{{ .ProjectName }}_{{ .Version }}_{{ replace .Os "darwin" "macos" }}_{{ .Arch }}'
     files:
       - words.txt
 
