fixed goreleaser deprecation

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -17,7 +17,8 @@ builds:
     main: .
 
 archives:
-  - format: zip
+  - formats:
+      - zip
     name_template: '{{ .ProjectName }}_{{ .Version }}_{{ replace .Os "darwin" "macos" }}_{{ .Arch }}'
     files:
       - words.txt
@@ -26,7 +27,7 @@ checksum:
   name_template: "checksums.txt"
 
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  version_template: "{{ .Tag }}-next"
 
 changelog:
   sort: asc
